--- a/_posts/2016-10-10-painting.md
+++ b/_posts/2016-10-10-painting.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Watercolor painting"
+title: "Do more of what makes you happy"
 date: 2016-10-10
 author: Coloma Farré
 backgrounds:
