--- a/_posts/2016-10-10-painting.md
+++ b/_posts/2016-10-10-painting.md
@@ -35,3 +35,5 @@ I started trying, practicing different technics, painting little drawings and fr
 <a href="/img/paint/20160823_011412.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160823_011412.jpg" width = "200"></a>
 
 <a href="/img/paint/20160915_140721.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160915_140721.jpg" width = "200"></a> And Ramona following her mama's steps ;D
+
+I hope you liked it! Joe and I have a project in mind that will involve some watercolor painting! I am excited but scared at the same time, and I'll tell you more about it soon! ;D
