--- a/_posts/2016-10-10-painting.md
+++ b/_posts/2016-10-10-painting.md
@@ -10,13 +10,13 @@ categories: Painting Watercolor Art
 comments: true
 ---
 
-This post is a little bit embarrassing for me but my husband thought it was a good idea and he insisted (forced) me to write it, and he normally has good ideas, so, here we go.
+This post is a little bit embarrassing for me but my husband thought it was a good idea and he insisted that I write it, and he normally has good ideas, so, here we go.
 
 <a href="/img/paint/IMG_6479.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/IMG_6479.jpg" width = "200"></a>
 
-Two years ago, when we were living in Gainesville, I was working at a Waldorf school, and for my birthday, one of my colleages, got me some watercolor paintings and paper. Every week at school the students will paint and I really liked their creations, so I decided to start painting to.
+Two years ago, when we were living in Gainesville, I was working at a Waldorf school, and for my birthday, one of my colleagues, got me some watercolor paints and paper. Every week at school the students would paint and I really liked their creations, so I decided to start painting to.
 
-I started trying, practicing different technics, painting little drawings and framing them, some for our house, some as gifts for friends. It was really fun and such a creative way to spend my free time! I loved it and I wish I had more time to learn more, but for the moment, it's just fun to play with the paints and create. Just create. It's relaxing and fulfilling for me!
+I started trying, practicing different techniques, painting little drawings and framing them, some for our house, some as gifts for friends. It was really fun and such a creative way to spend my free time! I loved it and I wish I had more time to learn more, but for the moment, it's just fun to play with the paints and create. Just create. It's relaxing and fulfilling for me!
 
 <a href="/img/paint/IMG_6475.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/IMG_6475.jpg" width = "200"></a>
 
