--- a/next_posts/2016-10-10-painting.md
+++ b/next_posts/2016-10-10-painting.md
@@ -6,17 +6,19 @@ author: Coloma Farré
 backgrounds:
     - /img/paint/Abstract-Colorful-Watercolor-Texture.jpg
 thumb: /img/paint/IMG_6494.jpg
-categories: Painting Watercolor Art
+categories: Painting Watercolor Art Hobby
 comments: true
 ---
 
 This post is a little bit embarrassing for me but my husband thought it was a good idea and he insisted that I write it, and he normally has good ideas, so, here we go.
 
-<a href="/img/paint/IMG_6479.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/IMG_6479.jpg" width = "200"></a>
+<a href="/img/paint/20160823_011412.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160823_011412.jpg" width = "200"></a>
 
-Two years ago, when we were living in Gainesville, I was working at a Waldorf school, and for my birthday, one of my colleagues, got me some watercolor paints and paper. Every week at school the students would paint and I really liked their creations, so I decided to start painting to.
+Two years ago, when we were living in Gainesville, I was working at a Waldorf school, and for my birthday, one of my colleagues, got me some watercolor paints and paper. Every week at school the students would paint and I really liked their creations, so I decided to start painting too.
 
 I started trying, practicing different techniques, painting little drawings and framing them, some for our house, some as gifts for friends. It was really fun and such a creative way to spend my free time! I loved it and I wish I had more time to learn more, but for the moment, it's just fun to play with the paints and create. Just create. It's relaxing and fulfilling for me!
+
+Here are some of the paintings we have around the house now:
 
 <a href="/img/paint/IMG_6475.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/IMG_6475.jpg" width = "200"></a>
 
@@ -28,12 +30,16 @@ I started trying, practicing different techniques, painting little drawings and 
 
 <a href="/img/paint/IMG_6496.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/IMG_6496.jpg" width = "200"></a>
 
-<a href="/img/paint/20160906_102409.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160906_102409.jpg" width = "200"></a> A special wedding gift!
+And a special wedding gift that now is hanging in the wall of a lovely, newly wed couple!
+
+<a href="/img/paint/20160906_102409.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160906_102409.jpg" width = "200"></a>
 
 <a href="/img/paint/IMG_6497.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/IMG_6497.jpg" width = "200"></a>
 
-<a href="/img/paint/20160823_011412.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160823_011412.jpg" width = "200"></a>
+<a href="/img/paint/IMG_6479.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/IMG_6479.jpg" width = "200"></a>
 
-<a href="/img/paint/20160915_140721.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160915_140721.jpg" width = "200"></a> And Ramona following her mama's steps ;D
+<a href="/img/paint/20160915_140721.jpg"> <img border="0" alt="Caption goes here" src = "/img/paint/20160915_140721.jpg" width = "200"></a> And Ramona following her mama's steps!?
 
-I hope you liked it! Joe and I have a project in mind that will involve some watercolor painting! I am excited but scared at the same time, and I'll tell you more about it soon! ;D
+I hope you liked it! And I encourage you to do it, do more of what makes you happy. Maybe it's painting, maybe it's reading, whatever it is.
+
+Joe and I have a project in mind that will involve some watercolor painting! I am really excited about it but scared at the same time, and I'll tell you more about it soon! ;D
