--- a/_posts/2016-10-31-fall .md
+++ b/_posts/2016-10-31-fall .md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Rediscovering Autumn"
+subtitle: Feeling every fall feeling
 date: 2016-10-31
 author: Coloma Farré
 backgrounds:
