--- a/next_posts/2016-10-09-mexic .md
+++ b/next_posts/2016-10-09-mexic .md
@@ -11,17 +11,17 @@ categories: Parenting Family Tavelling
 comments: true
 ---
 
-In November, 2015, we went to Mexico for 10 days as our first big family trip! The first time Ramona travelled out of the country, first time taking a plane, and she did great!
+A year ago we were in Mexico, with our 5 month old Ramona and now it seems so crazy that we did that, but it really was a great trip!! Our first big trip as a family of 3. The first time Ramona traveled out of the country, first time taking a plane, and she did great!
 
 <a href="/img/mexic/20151114_161004.jpg"> <img border="0" alt="Caption goes here" src = "/img/mexic/20151114_161004.jpg" width = "200"></a>
 
-We used AirBnB as our main source of accommodation, and we also stayed with friends a couple of nights. We spent one night in Playa del Carmen, 2 nights in the island of Cozumel, 4 nights in Tulum, 2 nights with some old friends on the cute island of Isla Mujeres and the list night before flighing in Cancun!
+We were in Mexico for 10 days. We used AirBnB as our main source of accommodation, and we also stayed with friends a couple of nights. We spent one night in Playa del Carmen, 2 nights in the island of Cozumel, 4 nights in Tulum, 2 nights with some old friends on the cute island of Isla Mujeres and the list night before flighing in Cancun!
 
 <a href="/img/mexic/20151116_104021.jpg"> <img border="0" alt="Caption goes here" src = "/img/mexic/20151116_104021.jpg" width = "200"></a>
 
 <a href="/img/mexic/20151116_111239.jpg"> <img border="0" alt="Caption goes here" src = "/img/mexic/20151116_111239.jpg" width = "200"></a>
 
-The food was amazing, everywhere we went. It was very easy to find little restaurants with typical Mexican food with handmade tortillas and fresh fish. I tried to avoid  salads and fresh salsa but Joe went all out and we never got sick. Ramona was still breastfed only but she did try a little bit of guacamole one day!
+The food was amazing, everywhere we went. It was very easy to find little restaurants with typical Mexican food with handmade tortillas and fresh fish. I tried to avoid salads and fresh salsa but Joe went all out and we never got sick. Ramona was still exclusivly breastfeding so it was very easy with her, but she did try a little bit of guacamole one day!
 
 We spent the days walking around town, going to the beach early in the morning or late in the afternoon to avoid the heat, taking naps at the house, having early dinners and talking about the future and life once Ramona was already asleep. We traveled light, one backpack each. We packed clothes for half the trip, diapers for the first 2 days, 2 toys for Ramona. We did laundry once, we bought more diapers there, she played with kitchen stuff. I gave away most of Ramona's clothes at the end of the trip because we wouldn't need summer clothes anymore anyway. Ramona slept with us because we didn't bring a travel crib. She took naps in the bus on our lap, in the taxi in my arms, on a blanket at the beach, etc... We carried her in the Baby Bjorn carrier, facing out while she was awake, facing in to take naps. We didn't need more.
 
