--- a/_posts/2016-11-15-ready.md
+++ b/_posts/2016-11-15-ready.md
@@ -10,11 +10,11 @@ categories: Family Parenting Traveling
 comments: true
 ---
 
-We are ready! Ready to go! Ready for the big move! To a new country. To a new continent. The three of us. Together. The big adventure starts tomorrow. Flying to Lisbon and then Maputo. All night in the air, hopefully sleeping... ;)
+We are ready! Ready to go! Ready for the big move! To a new country. To a new continent. The three of us. Together. The big adventure starts tomorrow. Flying to Lisbon and then Maputo. All night in the air, hopefully sleeping...(with a sick baby..., with a UT infection! Think about us and send us all your positive thoughts, we will need them...)
 
 <a href="/img/IMG_20161112_084745.jpg"> <img border="0" alt="Caption goes here" src = "/img/IMG_20161112_084745.jpg" width = "200"></a>
 
-I am very much excited and a little bit scared. Excited for new adventures, new house, new friends, new opportunities and places. I love imagining how our lives are going to be. We haven't even seen our place! It is so crazy to move to a new place knowing so little, but at the same time it is really exciting! Joe has been there twice this year, so he knows people there and he feels like we are going to really like it!
+I am very much excited and a little bit scared. Excited for new adventures, new house, new friends, new opportunities and places. To be able to live immersed in a totally different culture, learn what being a mother is over there, learn what toddlers eat and play with. I love imagining how our lives are going to be. We haven't even seen our place! It is so crazy to move to a new place knowing so little, but at the same time it is really exciting! Joe has been there twice this year, so he knows people there and he feels like we are going to really like it!
 
 But, **like every big change in life, this one comes with worries**. And I am amazed how different the situation is now that I have a baby! All my worries focus on Ramona! I don't know how she is going to adapt to the new house and routines. If we are going to find food that she likes and enough variety to offer her a healthy diet. I am worried about her getting sick. And how is she going to deal with another new language (they speak Portuguese there, which I haven't been practicing enough and that makes me worry too...)
 
@@ -24,3 +24,4 @@ But, down deep in my heart, I know everything is going to be OK, I really think 
 
 
 <a href="/img/blue_door.gif"> <img border="0" alt="Caption goes here" src = "/img/blue_door.gif" width = "200"></a>
+SEE YOU LATER!
