--- a/_posts/2016-11-15-ready.md
+++ b/_posts/2016-11-15-ready.md
@@ -18,7 +18,7 @@ I am very much excited and a little bit scared. Excited for new adventures, new 
 
 But, **like every big change in life, this one comes with worries**. And I am amazed how different the situation is now that I have a baby! All my worries focus on Ramona! I don't know how she is going to adapt to the new house and routines. If we are going to find food that she likes and enough variety to offer her a healthy diet. I am worried about her getting sick. And how is she going to deal with another new language (they speak Portuguese there, which I haven't been practicing enough and that makes me worry too...)
 
-What are we going to do there? It's not like Barcelona where we used to going to the park every day, meeting other moms with toddlers in family friendly cafes, taking the metro to meet some friends, doing the laundry in our washing machine, ... **There will be non of those things** in Manhiça, Mozambique. Everything will be different! And that sounds awesome but terrifying too!
+What are we going to do there? It's not like Barcelona where we are used to going to the park every day, meeting other moms with toddlers in family friendly cafes, taking the metro to meet some friends, doing the laundry in our washing machine, ... **There will be none of those things** in Manhiça, Mozambique. Everything will be different! And that sounds awesome but terrifying too!
 
 But, down deep in my heart, I know everything is going to be OK, I really think so. And I am excited to be able to share it with you all!
 
