--- a/_posts/2016-11-18-me-made-it.md
+++ b/_posts/2016-11-18-me-made-it.md
@@ -15,11 +15,11 @@ We made it! After about 20 hours of traveling (1 car ride, 2 flights and 2 diffe
 
 <a href="/img/madeit/IMG_8669.JPG"> <img border="0" alt="Caption goes here" src = "/img/madeit/IMG_8669.JPG" width = "200"></a> All the stuff!!!
 
-The trip went much better than I anticipated! Everything that could go well it did. First of all, while checking luggage we thought we would need to pay for an extra suitcase but apparently (we didn't know till then) we could check 2 suitcases each! So we rearenged our stuff to have less carry on, which made our trip much easier!
+The trip went much better than I anticipated! Everything that could go well did. First of all, while checking luggage we thought we would need to pay for an extra suitcase but apparently we could check 2 suitcases each! So we rearranged our stuff to have less carry on, which made our trip much easier!
 
 <a href="/img/madeit/IMG_8635.JPG"> <img border="0" alt="Caption goes here" src = "/img/madeit/IMG_8635.JPG" width = "200"></a>
 
-Ramona did great! She did have a little fever in the morning the day we left but later she was feeling much better. And, like we say in spanish, "no hay mal que por bien no venga" or ... Is not that I like for her to be sick, but the fact that she was a little bit off made her fall sleep more easily in the plane and stuff. The other great thing was that in the long flight (10h 15min from Lisbon to Maputo) the plane was not full, more like half way full, so we had 5 seats in a row for the 3 of us, which made it much easier for us to sleep (or at least for Ramona).
+Ramona did great! She did have a little fever in the morning the day we left but later she was feeling much better. And, like we say in Spanish, "no hay mal que por bien no venga" ("every cloud has a silver lining", more or less). It's not that I like for her to be sick, but the fact that she was a little bit off made her relaxed and helped her to fall asleep more easily in the plane. The other great thing was that in the long flight (10h 15min from Lisbon to Maputo) the plane was not full, more like half full, so we had 5 seats in a row for the 3 of us, which made it much easier for us to sleep (or at least for Ramona).
 
 <a href="/img/madeit/IMG_8643.JPG"> <img border="0" alt="Caption goes here" src = "/img/madeit/IMG_8643.JPG" width = "200"></a>
 
@@ -27,24 +27,24 @@ Ramona did great! She did have a little fever in the morning the day we left but
 
 <a href="/img/madeit/IMG_8650.JPG"> <img border="0" alt="Caption goes here" src = "/img/madeit/IMG_8650.JPG" width = "200"></a>
 
-Today is our second day in our new home! We are settling down, unpacking, we went grocery shopping yesterday, we need to buy stuff for the house and figure out the wifi in the house, but we are mostly set! The house is perfect (by mozambican standars) for us! Big living room / dinning room area, kitchen with all the basics, 2 bedrooms and a bathroom with a big shower. And the best thing is that we have a huge front yard full of trees (mostly mango trees) and sand which Ramona loves to play with!
+Today is our second day in our new home! We are settling down, unpacking, we went grocery shopping yesterday, we still need to buy stuff for the house, but we are mostly set! The house is very simple but perfect for us! Big living room / dinning room area, kitchen with all the basics, 2 bedrooms and a bathroom with a big shower. And the best thing is that we have a huge front yard full of trees (mostly mango trees) and sand with which Ramona loves to play!
 
 <a href="/img/madeit/IMG_8710.JPG"> <img border="0" alt="Caption goes here" src = "/img/madeit/IMG_8710.JPG" width = "200"></a> Ramona in front of our house.
 
 <a href="/img/madeit/IMG_8687.JPG"> <img border="0" alt="Caption goes here" src = "/img/madeit/IMG_8687.JPG" width = "200"></a>
 
-Yesterday was a hard day though. When we got the the house it didn't have running water, the fridge had a south african plug so we couldn't plugged it, half of the light in the house were off, some mosquito nets in the windows needed some fixing, etc. So we spent all morning figuering out things, waiting for the electritian, going to the cism (Centro de investigacao ... where Joe eorks, which is one blog away) to use her fridge to store Ramona's antibiotics, buying a new sim card for my phone, ... In the afternoon we went on a walk and to the big supermarket to buy a big load of stuff! But I think everything is coming in to place.
+Yesterday was a hard day though. When we got the the house it didn't have running water, the fridge had an incompatible South African plug, half of the lights in the house were off, some mosquito screens in the windows needed fixing, etc. So we spent all morning figuring out things, waiting for the electrician, going to the CISM (Centro de investigação em saude de Maniça where Joe works,) to use its fridge to store Ramona's antibiotics, buying a new sim card for my phone, ... In the afternoon we went on a walk and to the big supermarket to buy a big load of stuff! But I think everything is coming in to place.
 
 <a href="/img/madeit/IMG_8704.JPG"> <img border="0" alt="Caption goes here" src = "/img/madeit/IMG_8704.JPG" width = "200"></a>
 
 My first impressions:
 
-  - Hotter than I expected (I have to say also that yesterday was a specially hot day for the season) but I was miserable in the sun, sweating so much and thinking "and that is only spring!?!". But fortunately, last night it rained and today we woke up with a much cooler and breasyer day and I am very thankful for that!
+  - Hotter than I expected (I have to say also that yesterday was an especially hot day for the season) but I was miserable in the sun, sweating so much and thinking "and this is only spring!?!". But fortunately, last night it rained and today we woke up with a much cooler and breezier day and I am very thankful for that!
   - Greener than I expected! All the vegetation looks so green and alive! I kept thinking "any moment I will see a wild animal walking around or something!".
-  - Not handeling very well the driving in the left side thing yet!
+  - Not handling very well the driving on the left side thing yet!
   - I can understand people here less that I thought I would...
-  - Amazed on women walking around with big stuff on their heads like nothing is happening. And kids running around barefoot with big smiles on their faces!
+  - Amazed by women walking around with big stuff on their heads like nothing at all. And kids running around barefoot with big smiles on their faces!
 
 Comment: I've killed way to many spiders already. But again, mangos falling from the trees!! I guess I can't complain... ;)
 
-So far so good! We'll try to keep you posted!
+So far so good!
