--- a/next_posts/2016-10-09-mexic .md
+++ b/next_posts/2016-10-09-mexic .md
@@ -69,4 +69,4 @@ Some of the pictures we took and also a video of the trip at the end of the post
 
 And the video!!!
 
-<iframe width="600" height="337" src="https://www.youtube.com/embed/cMWFgi2ljy0" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="337" src="https://www.youtube.com/embed/cMWFgi2ljy0" frameborder="0" allowfullscreen></iframe>
