--- a/_posts/2016-11-23-mexic .md
+++ b/_posts/2016-11-23-mexic .md
@@ -1,31 +1,30 @@
----
+][]\---
 layout: post
-title: "Mexico with our 5 month old"
-date: 2016-10-09
+title: "Mexico with our 5 month old - 1 year ago!"
+date: 2016-11-23
 author: Coloma Farré
 backgrounds:
-    - /img/mexic/20151123_104231.jpg
     - /img/mexic/20151119_093640.jpg
 thumb: /img/mexic/20151123_110408.jpg
-categories: Parenting Family Tavelling
+categories: Parenting Family Taveling Video
 comments: true
 ---
 
-A year ago we were in Mexico, with our 5 month old Ramona. 1 YEAR AGO!! Time is funny this way! It feels like so much has happened in our lives and that seems more than a year ago some how... That was our first big trip as a family of 3. The first time Ramona traveled out of the country, first time taking a plane, and it really was a lot of fun!!
+A year ago we were in Mexico, with our 5 month old Ramona. 1 YEAR AGO!! Can't you believe it? Time is funny this way! It feels like so much has happened in our lives and it even seems more than a year ago some how... **That was our first big trip as a family of 3**. The first time Ramona traveled out of the country, first time taking a plane, and it really was a challenge for us but we did have a great time!!
 
 <a href="/img/mexic/20151114_161004.jpg"> <img border="0" alt="Caption goes here" src = "/img/mexic/20151114_161004.jpg" width = "200"></a>
 
-We were in Mexico for 10 days. We used AirBnB as our main source of accommodation, and we also stayed with friends a couple of nights. We spent one night in Playa del Carmen, 2 nights in the island of Cozumel, 4 nights in Tulum, 2 nights with some old friends on the cute island of Isla Mujeres and the list night before flighing in Cancun!
+We were in Mexico for 10 days. We used AirBnB as our main source of accommodation, and we also stayed with friends a couple of nights. We spent one night in Playa del Carmen, 2 nights in the island of Cozumel, 4 nights in Tulum, 2 nights with some old friends on the cute island of Isla Mujeres and the list night before flying in Cancun!
 
 <a href="/img/mexic/20151116_104021.jpg"> <img border="0" alt="Caption goes here" src = "/img/mexic/20151116_104021.jpg" width = "200"></a>
 
 <a href="/img/mexic/20151116_111239.jpg"> <img border="0" alt="Caption goes here" src = "/img/mexic/20151116_111239.jpg" width = "200"></a>
 
-The food was amazing, everywhere we went. It was very easy to find little restaurants with typical Mexican food with handmade tortillas and fresh fish. I tried to avoid salads and fresh salsa but Joe went all out and we never got sick. Ramona was still exclusibly breasthfeeding so it was very easy with her, but she did try a little bit of guacamole one day!
+The food was amazing, everywhere we went. It was very easy to find little restaurants with typical Mexican food with handmade tortillas and fresh fish. I tried to avoid salads and fresh salsa but Joe went all out and we never got sick. **Ramona was still exclusively breastfeeding so it was very easy with her**, but she did try a little bit of guacamole one day!
 
-We spent the days walking around town, going to the beach early in the morning or late in the afternoon to avoid the heat, taking naps at the house, having early dinners and talking about the future and life once Ramona was already asleep. We traveled light, one backpack each. We packed clothes for half the trip, diapers for the first 2 days, 2 toys for Ramona. We did laundry once, we bought more diapers there, she played with kitchen stuff. I gave away most of Ramona's clothes at the end of the trip because we wouldn't need summer clothes anymore anyway. Ramona slept with us because we didn't bring a travel crib. She took naps in the bus on our lap, in the taxi in my arms, on a blanket at the beach, etc... We carried her in the Baby Bjorn carrier, facing out while she was awake, facing in to take naps. We didn't need more.
+We spent the days walking around town, going to the beach early in the morning or late in the afternoon to avoid the heat, taking naps at the house, having early dinners and talking about the future and life once Ramona was already asleep. **We traveled light, one backpack each**. We packed clothes for half the trip, diapers for the first 2 days, 2 toys for Ramona. We did laundry twice, we bought more diapers there, she played with kitchen stuff. I gave away most of Ramona's clothes at the end of the trip because we wouldn't need summer clothes anymore anyway. Ramona slept with us because we didn't bring a travel crib. She took naps in the bus on our lap, in the taxi in my arms, on a blanket at the beach, etc... We carried her in the Baby Bjorn carrier, facing out while she was awake, facing in to take naps. We didn't need more.
 
-It was great to realize that we didn't need to have much with us to have fun and have nice days with a baby! At home we have so much stuff. When you travel, you realize that you don’t need that much. You do your life with what you have and it's a great thing to learn.
+It was great to realize that we didn't need to have much with us to have fun and have nice days with a baby! At home we have so much stuff. When you travel, you realize that you don’t need that much. **You do your life with what you have and it's a great thing to learn**.
 
 Some of the pictures we took and also a video of the trip at the end of the post!
 
@@ -70,3 +69,7 @@ Some of the pictures we took and also a video of the trip at the end of the post
 And the video!!!
 
 <iframe width="100%" height="337" src="https://www.youtube.com/embed/cMWFgi2ljy0" frameborder="0" allowfullscreen></iframe>
+
+I hope you enjoyed it! Thanks for reading! I Like looking back and seeing how things have change, how quickly time goes by and how amazing our lives are! I feel so lucky and thankful! And soon more about Mozambique, because I have a lot of things to tell you! ;)
+
+ ¡Ahí nos vemos cocodrilo!
