--- a/_posts/2016-11-23-mexic .md
+++ b/_posts/2016-11-23-mexic .md
@@ -1,4 +1,4 @@
-][]\---
+---
 layout: post
 title: "Mexico with our 5 month old - 1 year ago!"
 date: 2016-11-23
@@ -70,6 +70,4 @@ And the video!!!
 
 <iframe width="100%" height="337" src="https://www.youtube.com/embed/cMWFgi2ljy0" frameborder="0" allowfullscreen></iframe>
 
-I hope you enjoyed it! Thanks for reading! I Like looking back and seeing how things have change, how quickly time goes by and how amazing our lives are! I feel so lucky and thankful! And soon more about Mozambique, because I have a lot of things to tell you! ;)
-
- ¡Ahí nos vemos cocodrilo!
+I hope you enjoyed it! Thanks for reading! I Like looking back and seeing how things have changed, how quickly time goes by and how amazing life can be! And soon more about Mozambique, because I have a lot of things to tell you! ;)
