--- a/_posts/2016-11-30-mangos.md
+++ b/_posts/2016-11-30-mangos.md
@@ -46,7 +46,7 @@ Here is what we do:
 
 <a href="/img/mangos/20161125_163711.jpg"> <img border="0" alt="Caption goes here" src = "/img/mangos/20161125_163711.jpg" width = "200"></a>
 
-Well, is hard to say, because I've never tried mango jam before either so I don't have anything with which to compare it ... But the whole family enjoyed it for breakfast with some french toast and both Joe and Ramona approved!
+Well, it's hard to say, because I've never tried mango jam before either so I don't have anything with which to compare it ... But the whole family enjoyed it for breakfast with some french toast and both Joe and Ramona approved!
 
 <a href="/img/mangos/20161126_074741.jpg.jpg"> <img border="0" alt="Caption goes here" src = "/img/mangos/20161126_074741.jpg" width = "200"></a>
 
