--- a/_posts/2016-12-9-life.md
+++ b/_posts/2016-12-9-life.md
@@ -5,7 +5,7 @@ date: 2016-12-8
 author: Coloma Farré
 backgrounds:
     - /img/fondos/20161122_082009.jpg
-thumb: /img/lifehere/IMG_20161206_182411.jpg
+thumb: /img/lifehere/0000_IMG_20161206_182411.JPG
 categories: Family Mozambique
 comments: true
 ---
