--- a/_posts/2016-12-12-capulana.md
+++ b/_posts/2016-12-12-capulana.md
@@ -5,7 +5,7 @@ date: 2016-12-12
 author: Coloma Farré
 backgrounds:
     - /img/fondos/IMG_8286.JPG
-thumb: /img/capulana/IMG_5720.jpg
+thumb: /img/capulana/0000_IMG_5720.JPG
 categories: Family Mozambique Video Parenting
 comments: true
 ---
