--- a/next_posts/2016-12-20-with-baby.md
+++ b/next_posts/2016-12-20-with-baby.md
@@ -14,15 +14,15 @@ Traveling with a baby is not easy.
 
 It is so much fun though!
 
-I remember especially the first days here were kind of stressful and crazy. Settling in a new house, new place and environment. Sleep was difficult for Ramona at the beginning, figuring out food and schedule was hard too. But so worth it! Just to see her face every time she sees a chicken walking across the street, every time she hears a roster, to see her walking around and stopping to pick a flower or grab a mango from the grown, to see her playing with kids and making new friends! Such an awesome experience for her!
+I remember especially the first days here were very of stressful and crazy. Settling in a new house, new place and environment. Sleep was difficult for Ramona at the beginning, figuring out food and schedule was hard too. But so worth it! Just to see her face every time she sees a chicken walking across the street, every time she hears a roster, to see her walking around and stopping to pick a flower or grab a mango from the grown, to see her playing with kids and making new friends! Such an awesome experience for her!
 
-She is loving it! She loves nature and here we are so in contact with it. surrounded by it. And she loves playing with other kids. And here it's so easy because they are always out of the house, in the street, in the market with their moms, playing with their siblings outside! And they are very friendly too. Also, the fact that Ramona, since yesterday, was the only white kid in town makes it even more attractive and everyone wants to interact with her! It's so sweet but kind if bizarre too! Foreigners are more common in Manhiça (because of the research center) than in other Mozambican towns but we are still very special for the people here!
+She is loving it! She loves nature and here we are so in contact with it. Surrounded by it. And she loves playing with other kids. And here it's so easy because they are always out of the house, in the street, in the market with their moms, playing with their siblings outside! And they are very friendly too. The fact that Ramona, since a week ago, was the only white kid in town makes it even more attractive and everyone wants to interact with her! It's so sweet but kind if bizarre too! Foreigners are more common in Manhiça (because of the research center) than in other Mozambican towns but we are still very special for the people here!
 
 In this trip, **some things I've learned about traveling with a baby** are:
 
-- It's very important **to be flexible**, mostly at the beginning, to leave them time to adjust and get use to the new place.
-- **To bring some of her stuff from home**. I have noticed how nice it was for her to have her cup and plater here with her, to have her "Nina" doll to sleep with, some of her favorite books and toys, ... I think it gave her a "not everything is different" feeling that helped her.
+- It's very important **to be flexible**, mostly at the beginning, to leave them time to readjust and get use to the new place.
+- **To bring some of her stuff from home**. I have noticed how nice it was for her to have her cup and plate here with her, to have her "Nina" doll to sleep with, some of her favorite books and toys, ... I think it gave her a "not everything is different" feeling that helped her.
 - **To be open-minded** to the fact that everything will be different and that is not going to be easy! I had some hard days the first week, where I felt like, "what am I doing here? This is crazy!". But there's always the transitional period until you figure out your new life in the new place. And we are still figuring it out, but it is much nicer now that I know more people!
-- **To slow down**. As I was talking in another post, life with a toddler
-- **To be creative**. Here we don't have that much stuff, Ramona doesn't have all her toys, there are no toddler-mom activities organized or story-time at the library, etc. So we are trying to be creative with our time and resources. She plays outside a lot, in the sand, with water, with the neighbors, she is become such a helper at the house, doing the dishes with me (aka playing with the water and cups), sweping the floor (she things the broom is the best toy), etc.
-- **To explore** is our new favorite verb :D
+- **To slow down**. As I was talking in another post, life with a toddler can't be stressful at times but it can be very enriquidor too if we take it easy and follow their rythm.
+- **To be creative**. Here we don't have that much stuff, Ramona doesn't have all her toys, there are no toddler-mom activities organized or story-time at the library, etc. So we are trying to be creative with our time and resources. She plays outside a lot, in the sand, with water, with the neighbors, she is become such a helper at the house, doing the dishes with me (aka playing with the water and cups), sweeping the floor (she things the broom is the best toy), etc.
+- **To explore** is our new favorite verb :D And I love it!
