--- a/_posts/2017-02-02-to-miss.md
+++ b/_posts/2017-02-02-to-miss.md
@@ -5,7 +5,7 @@ date: 2017-02-02
 author: Coloma Farré
 backgrounds:
     - /img/fondos/IMG_2643.jpg
-thumb: /img/miss/IMG_2946.jpg
+thumb: /img/miss/0000_IMG_2946.JPG
 categories: Family Parenting Traveling Mozambique
 comments: true
 ---
