--- a/_posts/2017-02-02-to-miss.md
+++ b/_posts/2017-02-02-to-miss.md
@@ -9,6 +9,16 @@ thumb: /img/miss/0000_IMG_2946.JPG
 categories: Family Parenting Traveling Mozambique
 comments: true
 ---
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 3r family ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7902219614622730"
+     data-ad-slot="5093372400"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 Living in Mozambique is such a great adventure for the whole family. We are liking it and enjoying it **but it is not easy all the time**. It has its ups and downs. Compared to Barcelona, for example, some things are better and others are worse.
 
