done with explanatory text

--- a/_posts/2017-04-27-data.md
+++ b/_posts/2017-04-27-data.md
@@ -16,16 +16,20 @@ Fortunately, others do. What follows are some simple visual comparisons between 
 
 # Education
 
+Education is one of those areas where it's difficult to grasp just how quickly things are changing. A few decades ago, 1 in every 5 girls went to primary school in Mozambique; now, it's greater than 4 out of 5. 
 
 <a href="/img/data/Adjusted net enrollment rate, primary, female (1f primary school age children).png"> <img border="0" src= "/img/data/Adjusted net enrollment rate, primary, female (1f primary school age children).png" width="200"></a>
 
-
-
+Going to school is important, but only if the school you go to offers a good education - which is hard to do when there are 35 students for every teacher.  
 
 <a href="/img/data/Pupil-teacher ratio, lower secondary.png"> <img border="0" src= "/img/data/Pupil-teacher ratio, lower secondary.png" width="200"></a>
 
+Even if the number enrolled in primary school has increased dramatically, 3 out of 4 Mozambican students drop out before finishing middle school.
 
 <a href="/img/data/Lower secondary completion rate, total (1f relevant age group).png"> <img border="0" src= "/img/data/Lower secondary completion rate, total (1f relevant age group).png" width="200"></a>
+
+Changes in culture and education have seen a huge increase in literacy. Nearly 50% of adult women and 70% of adult men can now read, more than double the rate from a generation ago. Lots of progress made - but still a long way to go.
+
 
 <a href="/img/data/Literacy rate, adult female (1f females ages 15 and above).png"> <img border="0" src= "/img/data/Literacy rate, adult female (1f females ages 15 and above).png" width="200"></a>
 
@@ -34,38 +38,57 @@ Fortunately, others do. What follows are some simple visual comparisons between 
 
 # Health
 
+There are many health challenges in Mozambique. One notable one is the lack of doctors.
+
 
 <a href="/img/data/Physicians (per 1,000 people).png"> <img border="0" src= "/img/data/Physicians (per 1,000 people).png" width="200"></a>
 
+The difference in spending on health in Europe and Africa is astounding. If you take into account both public and private health care, the average Spaniard spends nearly $3,000 on health per year; in Mozambique, that number is $42.
+
 <a href="/img/data/Health expenditure per capita (current US$).png"> <img border="0" src= "/img/data/Health expenditure per capita (current US$).png" width="200"></a>
+
+The lack of money invested in health care is due to a lack of resources, and not a lack of need. Take, for example, the more than 100,000 children living with HIV in Mozambique; in Spain, that number is closer to 100.
 
 <a href="/img/data/Children (0-14) living with HIV.png"> <img border="0" src= "/img/data/Children (0-14) living with HIV.png" width="200"></a>
 
+Mozambique, like much of Southern Africa, has an extremely high prevalence of HIV among the adult population.
 
 <a href="/img/data/Prevalence of HIV, total (1f population ages 15-49).png"> <img border="0" src= "/img/data/Prevalence of HIV, total (1f population ages 15-49).png" width="200"></a>
 
+The incidence of malaria has gone down rapidly, but remains unacceptably high: 1 (clinical) case per person every 3 years.
 
 <a href="/img/data/Incidence of malaria (per 1,000 population at risk).png"> <img border="0" src= "/img/data/Incidence of malaria (per 1,000 population at risk).png" width="200"></a>
 
+Stunting - meaning being abnormally small due to chronic malnutrition - is sadly very common in Mozambique.
 
 <a href="/img/data/Prevalence of stunting, height for age (1f children under 5).png"> <img border="0" src= "/img/data/Prevalence of stunting, height for age (1f children under 5).png" width="200"></a>
 
-<a href="/img/data/Smoking prevalence, females (1f adults).png"> <img border="0" src= "/img/data/Smoking prevalence, females (1f adults).png" width="200"></a>
-
-<a href="/img/data/Smoking prevalence, males (1f adults).png"> <img border="0" src= "/img/data/Smoking prevalence, males (1f adults).png" width="200"></a>
-
-
-<a href="/img/data/Mortality rate, under-5 (per 1,000 live births).png"> <img border="0" src= "/img/data/Mortality rate, under-5 (per 1,000 live births).png" width="200"></a>
-
-
-<a href="/img/data/Low-birthweight babies (1f births).png"> <img border="0" src= "/img/data/Low-birthweight babies (1f births).png" width="200"></a>
+Stunting is not the only effect of malnutrition. 2 out of every 3 Mozambican children are anemic.
 
 <a href="/img/data/Prevalence of anemia among children (1f children under 5).png"> <img border="0" src= "/img/data/Prevalence of anemia among children (1f children under 5).png" width="200"></a>
 
+Spanish and Mozambican men smoke at similar rates.
+
+<a href="/img/data/Smoking prevalence, males (1f adults).png"> <img border="0" src= "/img/data/Smoking prevalence, males (1f adults).png" width="200"></a>
+
+But the difference in smoking rates among women is striking.
+
+<a href="/img/data/Smoking prevalence, females (1f adults).png"> <img border="0" src= "/img/data/Smoking prevalence, females (1f adults).png" width="200"></a>
+
+Today, nearly 1 out of every 10 children will die before turning 5. That's half the rate from a generation ago.
+
+<a href="/img/data/Mortality rate, under-5 (per 1,000 live births).png"> <img border="0" src= "/img/data/Mortality rate, under-5 (per 1,000 live births).png" width="200"></a>
+
+About 8% of Spanish babies are born at low weight (below 2.5kg); the rate is more than double that in Mozambique.
+
+<a href="/img/data/Low-birthweight babies (1f births).png"> <img border="0" src= "/img/data/Low-birthweight babies (1f births).png" width="200"></a>
+
+Life expectancy remains low in Mozambique, largely as a result of poverty and illness. Spaniards, on average, live 30 years longer than their Mozambican counterparts.
+
+<a href="/img/data/Life expectancy at birth, male (years).png"> <img border="0" src= "/img/data/Life expectancy at birth, male (years).png" width="200"></a>
 
 <a href="/img/data/Life expectancy at birth, female (years).png"> <img border="0" src= "/img/data/Life expectancy at birth, female (years).png" width="200"></a>
 
-<a href="/img/data/Life expectancy at birth, male (years).png"> <img border="0" src= "/img/data/Life expectancy at birth, male (years).png" width="200"></a>
 
 
 
@@ -74,29 +97,45 @@ Fortunately, others do. What follows are some simple visual comparisons between 
 # Wealth
 
 
+The average amount of money that a person makes in a year (even after adjustment for "purchasing power") is about 3% of the value in Spain. That means it takes a month of work in Mozambique to earn what a Spaniard gets in a day.
+
 <a href="/img/data/GDP per capita, PPP (constant 2011 international $).png"> <img border="0" src= "/img/data/GDP per capita, PPP (constant 2011 international $).png" width="200"></a>
 
 
 # Society
 
+Walking around town, it feels like children are everywhere. And the data confirm it - about half of Mozambicans are children.
+
 <a href="/img/data/Population ages 0-14 (1f total).png"> <img border="0" src= "/img/data/Population ages 0-14 (1f total).png" width="200"></a>
 
+Development in Spain has seen a continual decline in the percentage of land devoted to agriculture; in Mozambique, you can see the opposite trend.
 
 <a href="/img/data/Agricultural land (1f land area).png"> <img border="0" src= "/img/data/Agricultural land (1f land area).png" width="200"></a>
 
+Essentially all Spaniards get their water from an "improved" source (ie, plumbing, a well, etc.). Half of Mozambicans don't (meaning they get their water from a river or lake).
 
 <a href="/img/data/Improved water source (1f population with access).png"> <img border="0" src= "/img/data/Improved water source (1f population with access).png" width="200"></a>
+
+The health risks posed by getting water from a river or lake are exacerbated by the fact that many Mozambicans live in areas where there is no system for dealing with human waste.
+
+<a href="/img/data/People practicing open defecation (1f population).png"> <img border="0" src= "/img/data/People practicing open defecation (1f population).png" width="200"></a>
+
+
+For every 41 tourists to Spain, 1 tourist goes to Mozambique.
 
 <a href="/img/data/International tourism, number of arrivals.png"> <img border="0" src= "/img/data/International tourism, number of arrivals.png" width="200"></a>
 
 
-<a href="/img/data/People practicing open defecation (1f population).png"> <img border="0" src= "/img/data/People practicing open defecation (1f population).png" width="200"></a>
 
 
     
 # Technology
 
+Though increasing rapidly, still fewer than 1 in 4 Mozambicans have electricity.
+
 <a href="/img/data/Access to electricity (1f population).png"> <img border="0" src= "/img/data/Access to electricity (1f population).png" width="200"></a>
+
+Cell phones tell a different story. Approximately two thirds of Mozambicans have a cell phone, and that number is likely outdated.
 
 
 <a href="/img/data/Mobile cellular subscriptions (per 100 people).png"> <img border="0" src= "/img/data/Mobile cellular subscriptions (per 100 people).png" width="200"></a>
@@ -104,7 +143,7 @@ Fortunately, others do. What follows are some simple visual comparisons between 
 
 # Data source
 
-All data are from the [World Bank](http://www.worldbank.org/en/country/mozambique). Code for the visualizations is at.
+All data are from the [World Bank](http://www.worldbank.org/en/country/mozambique). R Code for the charts is [here](https://github.com/colomafarre/colomafarre.github.io/tree/master/joe_data_post/2017-04-28-data.R).
 
 
 
